# vima

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  llms.txt
.beads/: issues.jsonl
.claude/skills/create-release/: SKILL.md
.github/workflows/: ci.yml  release.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_batch_json.rs  fuzz_id_validation.rs  fuzz_yaml_parse.rs
plugins/: vima-sync
src/: batch.rs  cli.rs  deps.rs  error.rs  filter.rs  id.rs  lib.rs  main.rs  output.rs  plugin.rs  store.rs  ticket.rs
tests/: concurrency_integration.rs  help_integration.rs  plugin_integration.rs  stress_integration.rs  sync_plugin_test.sh  workflow_integration.rs
