[package]
name = "vima"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gray_matter = "0.3"
colored = "3.1"
jiff = "0.2"
nanoid = "0.4"
which = "8.0"
exec = "0.3.1"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
