[package]
name = "vima-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3"
gray_matter = "0.3"

[dependencies.vima]
path = ".."

[[bin]]
name = "fuzz_yaml_parse"
path = "fuzz_targets/fuzz_yaml_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_id_validation"
path = "fuzz_targets/fuzz_id_validation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_batch_json"
path = "fuzz_targets/fuzz_batch_json.rs"
test = false
doc = false
bench = false
